[package]
name = "ratatui-elm"
version = "1.1.0"
edition = "2024"
authors = ["Devin Droddy <devin@justdeeevin.dev>"]
license = "MIT"
repository = "https://github.com/justdeeevin/ratatui-elm"
description = "A simple Elm architecture framework for ratatui"
readme = "README.md"
keywords = ["tui", "elm", "framework", "ratatui"]
categories = ["command-line-interface", "asynchronous"]

[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = [
  "underline-color",
] }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "macros"] }
crossterm = { version = "0.28.1", features = ["event-stream"], optional = true }
cfg-if = "1.0.4"

[features]
default = ["crossterm"]
crossterm = ["ratatui/crossterm", "dep:crossterm"]
termwiz = ["ratatui/termwiz"]
termion = ["ratatui/termion"]
